<resources>
    <string name="app_name">Newproject</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="pass">password</string>
    <string name="object">objective</string>
    <string name="save">save</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
