<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".activite.MainActivity">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="id"
            android:inputType="number" />

        <EditText
            android:id="@+id/name"
            android:textAlignment="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:hint="@string/pass"
            android:inputType="text" />

        <EditText
            android:id="@+id/object"
            android:layout_width="match_parent"
            android:textAlignment="center"

            android:layout_height="wrap_content"
            android:hint="@string/object"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first"
        android:background="#632c2c"
        android:onClick="here"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="#27e900"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="168dp"
        android:background="#450f0f"
        android:clickable="true"
        android:focusable="true" />
</RelativeLayout>